plugin/src/test/resources/annotator/perl/syntax/doubleDiamond510.code
my @list;
@list = <>;
@list = <FH>;
@list = <Foo::Bar::FH>;
@list = <Foo'Bar'FH>;
@list = <$foo>;
@list = <*.txt>;
@list = <error descr="Double diamond available in perl 5.22+"><<>></error>;
